Add button to reset grid. User can set the gridsize Change grid size button deletes grid and creates new one

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Web-A-Sketch</h1>
-
+    <button id="gridChangeBtn">Change Grid Size</button>
+    
     <div id="sketchGrid">
 
     </div>
