Change index, javascript, and style files. Add button to reset the grid. Style change for grid to be visible Change javascript to allow user to click and hold for drawing

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Web-A-Sketch</h1>
     <button id="gridChangeBtn">Change Grid Size</button>
+    <button id="resetBtn">Reset</button>
     
     <div id="sketchGrid">
 
     </div>
-
     <script src="javascript.js"></script>
 </body>
 </html>
