Adjust css and index Add container for buttons to organize them better Add grid container to give it a background and center Adjust style.css to allow divs to expand/shrink according to grid size

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <h1>Web-A-Sketch</h1>
-    <button id="gridChangeBtn">Change Grid Size</button>
-    <button id="resetBtn">Reset</button>
-    
-    <div id="sketchGrid">
 
+    <div id="buttonContainer">
+        <button id="gridChangeBtn">Change Grid Size</button>
+        <button id="resetBtn">Reset</button>
+    </div>
+    <div id="gridContainer">
+        <div id="sketchGrid">
+        </div>
     </div>
     <script src="javascript.js"></script>
 </body>
