Adjust index, javascript, and style Add more divs to index to organize content Adjust grid change button to verify input is acceptable Change style.css to center content and improve appearance

--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 <body>
     <h1>Web-A-Sketch</h1>
 
-    <div id="buttonContainer">
-        <button id="gridChangeBtn">Change Grid Size</button>
-        <button id="resetBtn">Reset</button>
-    </div>
-    <div id="gridContainer">
-        <div id="sketchGrid">
+    <div class="container">
+        <div id="sidePanel">
+            <h3>Options</h3>
+            <div id="buttonContainer">
+                <button id="gridChangeBtn">Change Grid Size</button>
+                <button id="resetBtn">Reset</button>
+            </div>    
+        </div>
+        
+        <div id="gridContainer">
+            <div id="sketchGrid">
+            </div>
         </div>
     </div>
+    
     <script src="javascript.js"></script>
 </body>
 </html>
