Add new buttons for modes Index change allows resetting and erase Javascript change to allow reset functionality and erase.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <h3>Options</h3>
             <div id="buttonContainer">
                 <button id="gridChangeBtn">Change Grid Size</button>
+                <button id="eraseBtn">Toggle Erase</button>
+                <button id="rainbowBtn">Rainbow mode</button>
                 <button id="resetBtn">Reset</button>
             </div>    
         </div>
